# Architecture-Patterns-with-Python

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/allocation/adapters/: repository.py
src/allocation/entrypoints/: flask_app.py
src/allocation/service_layer/: handlers.py
tests/e2e/: api_client.py
tests/integration/: test_uow.py
tests/unit/: test_handlers.py
